objects/ssot__Invoice__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BalanceAmount__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__BillToContactId__c</fullName>
        <label>Bill to contact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BillingAccountId__c</fullName>
        <label>Billing Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionStatus__c</fullName>
        <label>Collection Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CollectionUserId__c</fullName>
        <label>Collection User Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CorpCrcyCnvTotWithTaxAmount__c</fullName>
        <label>Corp Crcy Cnv Tot Amt With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrencyCvsnDate__c</fullName>
        <label>Corporate Currency Cvsn Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrencyCvsnRate__c</fullName>
        <label>Corporate Currency Cvsn Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CorporateCurrency__c</fullName>
        <label>Corporate Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__CreationMode__c</fullName>
        <label>Creation Mode</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DaysInvoiceOpenNumber__c</fullName>
        <label>Days Invoice Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DaysInvoiceOverdueNumber__c</fullName>
        <label>Days Invoice Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FullSettlementDate__c</fullName>
        <label>Full Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GroupingKeyText__c</fullName>
        <label>Grouping Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Invoice Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceAppType__c</fullName>
        <label>Invoice App Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceBatchRunId__c</fullName>
        <label>Invoice Batch Run</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceDate__c</fullName>
        <label>Invoice date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceReferenceText__c</fullName>
        <label>Invoice Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceSettlementLevel__c</fullName>
        <label>Settlement Level</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InvoiceStatus__c</fullName>
        <label>Invoice Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsBillingScheduleGroupSkipped__c</fullName>
        <label>Is Billing Schedule Group Skipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NetCreditsAppliedAmount__c</fullName>
        <label>Net Credits Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__NetPaymentsAppliedAmount__c</fullName>
        <label>Net Payments Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentExclusionReasonText__c</fullName>
        <label>Payment Exclusion Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PaymentTermId__c</fullName>
        <label>Payment Term</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PostedDate__c</fullName>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceEntityId__c</fullName>
        <label>Reference Entity Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReferenceEntity__c</fullName>
        <label>Reference Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SettlementStatus__c</fullName>
        <label>Settlement Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShouldExcludePaymentText__c</fullName>
        <label>Should Exclude Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxLocaleType__c</fullName>
        <label>Tax Locale Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TotAppliedCrMemoLineAmount__c</fullName>
        <label>Tot Applied Credit Memo Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotPymtLineInvLineAppliedAmount__c</fullName>
        <label>Tot Pymt Line Inv Line Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotPymtLineInvLineUnappAmount__c</fullName>
        <label>Tot Pymt Line Inv Line Unapp</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotUnappliedCrMemoLineAmount__c</fullName>
        <label>Tot Unapplied Credit Memo Line Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentAmount__c</fullName>
        <label>Total Adjustment Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentTaxAmount__c</fullName>
        <label>Total Adjustment Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAdjustmentWithTaxAmount__c</fullName>
        <label>Total Adjustment Amount With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalChargeAmount__c</fullName>
        <label>Total Charge Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalChargeTaxAmount__c</fullName>
        <label>Total Charge Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalChargeWithTaxAmount__c</fullName>
        <label>Total Charge Amount With Tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalConvertedNegAmount__c</fullName>
        <label>Total Converted Neg Amount</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCreditMemoInvAppliedAmount__c</fullName>
        <label>Total Credit Memo Inv Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalCreditMemoInvUnappliedAmount__c</fullName>
        <label>Total Credit Memo Inv Unapplied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPaymentLineInvAppliedAmount__c</fullName>
        <label>Total Payment Line Inv Applied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPaymentLineInvUnappliedAmount__c</fullName>
        <label>Total Payment Line Inv Unapplied</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTaxAmount__c</fullName>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalWithTaxAmount__c</fullName>
        <label>Total Amount with tax</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
</CustomObject>